force-app/main/default/objects/custom_create149__c/custom_create149__c.object-meta.xml
<CustomObject>
    <label>Custom created object149</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects149</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>