force-app/main/default/objects/custom_create149__c/fields/custom_create_149field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_149field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 149field530</label>
    <type>Checkbox</type>
</CustomField>