force-app/main/default/objects/custom_create149__c/fields/custom_create_149field583__c.field-meta.xml
<CustomField>
    <fullName>custom_create_149field583__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 149field583</label>
    <type>Checkbox</type>
</CustomField>